# kerberus-chat

./: .gitignore  README.md  pyproject.toml
as_server/: as_server.py  kdf.py  user_db.py
client/: client.py  ui.py
common/: config.py  crypto.py  protocol.py
docs/: issues_pendentes.md  issues_projeto.md  planejamento.md  plano_servidor_notas.md  servico_notas.md
docs/relatorio/: relatorio.tex
scripts/: cadastrar_usuario.py  gerar_chaves.py  kerberos_demo.py  simular_ataque.py  testar_ataque.py
service/: handler.py  service_server.py
tests/: conftest.py  test_as_server_e2e.py  test_cadastrar_usuario.py  test_config.py  test_crypto.py  test_gerar_chaves.py  test_message.py  test_parsear_comando.py  test_service_server.py  test_tgs_server.py  test_user_db.py
tgs_server/: message.py  tgs_server.py
